# construction-doc-rag-platform

./: .dockerignore  .env.example  .gitignore  README.md  app.py  main.py  pyproject.toml  readme.md  run.py
.streamlit/: config.toml
construction_rag/api/: deps.py  main.py
construction_rag/api/routes/: documents.py
construction_rag/api/schemas/: admin.py  common.py  documents.py
construction_rag/core/: errors.py  paths.py
construction_rag/db/: models.py  session.py
construction_rag/db/repositories/: chat.py
construction_rag/services/embeddings/: faiss_store.py  reranker.py
construction_rag/services/llm/: base.py  openai_client.py
construction_rag/services/ocr/: google_vision.py  models.py  service.py
docker/: Dockerfile  docker-compose.yml
frontend/: streamlit_app.py
frontend/ui/: styles.css
rag_pipeline/api/: deps.py  main.py
rag_pipeline/api/routes/: admin.py  documents.py  queries.py
rag_pipeline/db/: models.py
rag_pipeline/db/repositories/: chat.py  documents.py
rag_pipeline/services/documents/: ingestion.py
rag_pipeline/services/embeddings/: embedder.py  faiss_store.py
rag_pipeline/services/llm/: anthropic_client.py  factory.py  openai_client.py
rag_pipeline/services/ocr/: google_vision.py  pdf_text.py  service.py
requirements/: base.txt  dev.txt
routers/: admin.py  documents.py  queries.py
src/construction_document_rag.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: conftest.py  test_chunking.py  test_faiss_store.py
utils/: database.py  embedding.py  language_model.py  ocr.py  prompt.py
(+19 files in other folders)
