[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "construction-document-rag"
version = "0.1.0"
description = "Production-grade construction document RAG backend (OCR + embeddings + retrieval + citations)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Hassan Khan" }]

[tool.setuptools.packages.find]
where = ["."]
include = ["construction_rag*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
